@@ -145,5 +145,20 @@ if [runto csub] then {
     }
 }
 
+gdb_exit
+gdb_start
+gdb_reinitialize_dir $srcdir/$subdir
+gdb_load $binfile
+
+# Try exercising the "minimal" language a bit...
+
+if [runto csub] then {
+    gdb_test "set lang minimal" \
+             "Warning: the current language does not match this frame." \
+             "set lang to minimal"
+    
+    gdb_test "print x" " = 5000" "print parameter value"
+}
+
 set timeout $oldtimeout
 return 0
